--- a/gtk-3.0/_common.scss
+++ b/gtk-3.0/_common.scss
@@ -1379,9 +1379,8 @@ headerbar {
       padding: 0;
     }
   }
-  
-  // hide separator
-  separator { background-color: transparent; }
+
+  separator { background-color: $dark_bg_color; }
 }
 
 // Headerbar widgets
@@ -1499,7 +1498,7 @@ headerbar { // headerbar border rounding
     box-shadow: none;
   }
 
-  > separator { background-color: $dark_borders_color; }
+  > separator { @include headerbar_fill; }
 
   @extend %titlebar;
 }
