Fix Entry:has-frame if backdrop/disabled

--- a/gtk-3.0/_common.scss
+++ b/gtk-3.0/_common.scss
@@ -255,7 +255,7 @@ entry {
     }
 
     &.flat {
-      &:focus, & {
+      &:focus, &:backdrop, &:disabled, &:backdrop:disabled, & {
         min-height: 0;
         padding: 2px;
         background-image: none;
