--- a/gtk-3.0/_drawing.scss
+++ b/gtk-3.0/_drawing.scss
@@ -114,49 +114,33 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
 }
 
 // These shadows acts like borders on the buttons
-@mixin btn-shadow($children: true) {
+@mixin btn-shadow($state: normal) {
   $sc: transparentize(black, 0.88); // main shadow
   $scb: transparentize(black, 0.8); // bottom shadow (should be a little bit more intense)
   $sch: transparentize(white, 0.88); // top hilight
-  @if $children or $children == normal {
-    & {
-      box-shadow: 1px 0 $sc,
-        0 1px 1px $scb,
-        0 2px $sc,
-        -1px 0 $sc,
-        0 -1px $sc,
-        inset 0 1px $sch;
-    }
+  $scf: if($variant == 'light', transparentize($selected_bg_color, 0.0), transparentize($selected_bg_color, 0.0)); // focus shadow
+
+  @if $state == normal {
+    box-shadow: 1px 0 $sc,
+      0 1px 1px $scb,
+      0 2px $sc,
+      -1px 0 $sc,
+      0 -1px $sc,
+      inset 0 1px $sch;
   }
-  @else if $children or $children == first-child {
-    &:first-child {
-      box-shadow: 0 0 $sc,
-        0 1px 1px $scb, 
-        0 2px $sc,
-        -1px 0 $sc,
-        0 -1px $sc,
-        inset 0 1px $sch;
-    }
+  @else if $state == active {
+    box-shadow: inset 0 0 0 1px transparentize(black, 0.8);
   }
-  @else if $children or $children == last-child {
-    &:last-child {
-      box-shadow: 1px 0 $sc,
-        0 1px 1px $scb,
-        0 2px $sc,
-        0 0 $sc,
-        0 -1px $sc,
-        inset 0 1px $sch;
-    }
+  @else if $state == focus {
+    box-shadow: 1px 0 $sc,
+      0 1px 1px $scb,
+      0 2px $sc,
+      -1px 0 $sc,
+      0 -1px $sc,
+      inset 0 0 0 1px $scf;
   }
-  @else if $children or $children == only-child {
-    &:only-child {
-      box-shadow: 1px 0 $sc,
-        0 1px 1px $scb,
-        0 2px $sc,
-        -1px 0 $sc,
-        0 -1px $sc,
-        inset 0 1px $sch;
-    }
+  @else if $state == disabled {
+    box-shadow: inset 0 0 0 1px transparentize(black, 0.9);
   }
 }
 
@@ -179,11 +163,8 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
 // osd, osd-hover, osd-active, osd-insensitive, osd-backdrop, undecorated
 //
 
-  // Pressed button shadow
-  $inset-shade: inset 0 0 0 1px transparentize(black, 0.8);
   // Border colors
   $btn-border: if($c!=$bg_color, _border_color($c), darken($borders_color, 12%));
-  $btn-focus: if($variant == 'light', 0 0 0 2px transparentize($selected_bg_color, 0.85), 0 0 0 2px transparentize($selected_bg_color, 1.0));
 
   $_button_edge: if($edge == none, none, _widget_edge($edge));
   $_blank_edge: if($edge == none, none, _widget_edge(transparentize($edge, 1)));
@@ -214,6 +195,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   @else if $t==focus {
   // focused button
     color: $tc;
+    @include btn-shadow(focus);
   }
 
   @else if $t==active {
@@ -222,7 +204,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
     outline-color: transparentize($tc, 0.7);
     border-color: $btn-border;
     background-color: darken($c, 8%);
-    box-shadow: $inset-shade;
+    @include btn-shadow(active);
   }
   @else if $t==hoveractive {
   // pushed hovered button
@@ -238,7 +220,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
     background-color: $_bg;
     text-shadow: none;
     -gtk-icon-shadow: none;
-    box-shadow: none;
+    @include btn-shadow(disabled);
     // white with 0 alpha to avoid an ugly transition, since no color means
     // black with 0 alpha
     > .label { color: inherit; }
@@ -250,7 +232,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
     $_bc: if($c!=$bg_color, _border_color($c), $insensitive_borders_color);
     color: if($c!=$bg_color, mix($tc, $_bg, 60%), $insensitive_fg_color);
     border-color: $_bc;
-    box-shadow: none;
+    @include btn-shadow(disabled);
     background-color: darken($c, 5%);
     // white with 0 alpha to avoid an ugly transition, since no color means
     // black with 0 alpha
@@ -278,20 +260,20 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
     color: $dfc;
     border-color: darken($dark_borders_color, 15%);
     background-color: darken($dc, 8%);
-    box-shadow: $inset-shade;
+    @include btn-shadow(active);
   }
   @else if $t==headerbutton-hoveractive {
   // active hovered header button
     color: $dfc;
     border-color: darken($dark_borders_color, 15%);
     background-color: darken($dc, 12%);
-    box-shadow: $inset-shade;
+    @include btn-shadow(active);
   }
   @else if $t==headerbutton-focus {
   // focus header button
     color: $dfc;
-    box-shadow: $btn-focus;
     border-color: $selected_bg_color;
+    @include btn-shadow(focus);
   }
   @else if $t==headerbutton-disabled {
   // disabled header button
