--- a/gnome-shell/gnome-shell-high-contrast.css
+++ b/gnome-shell/gnome-shell-high-contrast.css
@@ -345,7 +345,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 /* Tiled window previews */
 .tile-preview { background-color: rgba(33, 93, 156, 0.5); border: 1px solid #215d9c; }
 
-.tile-preview-left.on-primary { border-radius: 0px 0px 0 0; }
+.tile-preview-left.on-primary { border-radius: 0px 0 0 0; }
 
 .tile-preview-right.on-primary { border-radius: 0 0px 0 0; }
 
@@ -546,7 +546,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 .popup-menu-icon { icon-size: 1.09em; }
 
-.window-close { background-image: url("close-window.svg"); background-size: 32px; height: 32px; width: 32px; }
+.window-close { background-image: url("close-window.svg"); background-size: 32px; height: 32px; width: 32px; -shell-close-overlap: 16px; }
 
 .window-close:hover { background-image: url("close-window-hover.svg"); }
 
@@ -699,6 +699,8 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 .app-well-app > .overview-icon.overview-icon-with-label, .grid-search-result .overview-icon.overview-icon-with-label { padding: 10px 8px 5px 8px; spacing: 4px; }
 
 .workspace-thumbnails { visible-width: 32px; spacing: 11px; padding: 8px; border-radius: 0; }
+
+.workspace-thumbnails .placeholder { background-image: url("dash-placeholder.svg"); background-size: contain; height: 24px; }
 
 .workspace-thumbnail-indicator { border: 2px solid #215d9c; padding: 1px; }
 
