--- a/gtk-3.0/_common.scss
+++ b/gtk-3.0/_common.scss
@@ -1916,10 +1916,10 @@ notebook {
             &:checked, &:checked:hover {
               background-color: $bg_color;
               border-width: 0;
-              @if $_pos==top { box-shadow: none; }
-              @else if $_pos==bottom { box-shadow: none; }
-              @else if $_pos==left { box-shadow: none; }
-              @else if $_pos==right { box-shadow: none; }
+              @if $_pos==top { box-shadow: inset 0 -3px $selected_bg_color; }
+              @else if $_pos==bottom { box-shadow: inset 0 3px $selected_bg_color; }
+              @else if $_pos==left { box-shadow: inset -3px 0 $selected_bg_color; }
+              @else if $_pos==right { box-shadow: inset 3px 0 $selected_bg_color; }
             }
           }
         }
@@ -2364,13 +2364,13 @@ radio {
   border: 0px solid;
   -gtk-icon-source: none;
 
-  @include button(check-normal);
+  @include check(normal);
 
-  &:hover { @include button(check-hover); }
-  &:active { @include button(check-checked); }
-  &:checked { @include button(check-checked); }
-  &:checked:hover { @include button(check-checked); }
-  &:disabled { @include button(insensitive); }
+  &:hover { @include check(hover); }
+  &:active { @include check(checked); }
+  &:checked { @include check(checked); }
+  &:checked:hover { @include check(checked); }
+  &:disabled { @include check(insensitive); }
 
   @if $variant == 'light' {
     // the borders of the light variant versions of checks and radios are too similar in luminosity to the selected background
