--- a/gtk-3.0/_drawing.scss
+++ b/gtk-3.0/_drawing.scss
@@ -277,9 +277,9 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   }
   @else if $t==headerbutton-disabled {
   // disabled header button
+    background-color: darken($dc, 5%);
     color: if($tc!=$fg_color, mix($tc, $_bg, 50%), $insensitive_fg_color);
-    border-color: transparentize($dark_borders_color, 0.7);
-    background-color: transparent;
+    @include btn-shadow(disabled);
   }
 
   // osd buttons
