--- a/gtk-3.0/_other.scss
+++ b/gtk-3.0/_other.scss
@@ -140,7 +140,7 @@ menu,
   @extend %view;
 }
 
-// Shouldn't be needed
+// Disk space display
 .disk-space-display {
   border-style: solid;
   border-width: 2px;
