--- a/gnome-shell/gnome-shell-sass/_common.scss
+++ b/gnome-shell/gnome-shell-sass/_common.scss
@@ -1110,6 +1110,10 @@ StScrollBar {
   .aggregate-menu {
     min-width: 21em;
     .popup-menu-icon { padding: 0 4px; }
+    .popup-sub-menu .popup-menu-item :first-child {
+      &:ltr { padding-left: 12px; margin-left: 1.09em; }
+      &:rtl { padding-right: 12px; margin-right: 1.09em; }
+    }
   }
 
   .system-menu-action {
