--- a/gtk-3.0/_common.scss
+++ b/gtk-3.0/_common.scss
@@ -3050,7 +3050,7 @@ row {
  *************/
 
 expander {
-  arrow {
+  title > arrow {
     min-width: 16px;
     min-height: 16px;
     -gtk-icon-source: -gtk-icontheme('pan-end-symbolic');
