--- a/gnome-shell/gnome-shell.css
+++ b/gnome-shell/gnome-shell.css
@@ -791,9 +791,11 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 .magnifier-zoom-region.full-screen { border-width: 0; }
 
 /* On-screen Keyboard */
+.word-suggestions { font-size: 14pt; spacing: 12px; min-height: 20pt; }
+
 #keyboard { background-color: rgba(51, 51, 51, 0.7); }
 
-.keyboard-layout { spacing: 10px; padding: 10px; }
+.keyboard-layout, .key-container { spacing: 10px; padding: 10px; }
 
 .keyboard-row { spacing: 15px; }
 
@@ -806,6 +808,10 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 .keyboard-key:active { color: white; background-color: rgba(0, 0, 0, 0.4); box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.3); border: 1px solid rgba(255, 255, 255, 0.1); text-shadow: none; icon-shadow: none; }
 
 .keyboard-key:grayed { background-color: #333; color: #f2f1f0; border-color: rgba(0, 0, 0, 0.7); }
+
+.keyboard-key.default-key { border-color: #f49a75; }
+
+.keyboard-key.enter-key { border-color: #2e2e2e; }
 
 .keyboard-subkeys { color: white; padding: 5px; -arrow-border-radius: 0; -arrow-background-color: rgba(51, 51, 51, 0.7); -arrow-border-width: 1px; -arrow-border-color: rgba(242, 241, 240, 0.2); -arrow-base: 0px; -arrow-rise: 0px; -boxpointer-gap: 1px; }
 
