--- a/gtk-3.0/gtk-contained-dark.css
+++ b/gtk-3.0/gtk-contained-dark.css
@@ -1625,6 +1625,20 @@ XfceHeading, .XfceHeading { margin: 0; padding: 0; border-width: 0; background-i
 
 .xfce4-panel menu { -gtk-icon-effect: none; text-shadow: none; }
 
+.xfce4-panel menu button { color: #f2f1f0; outline-color: rgba(242, 241, 240, 0.3); background-color: #404040; box-shadow: 1px 0 rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.2), 0 2px rgba(0, 0, 0, 0.12), -1px 0 rgba(0, 0, 0, 0.12), 0 -1px rgba(0, 0, 0, 0.12), inset 0 1px rgba(255, 255, 255, 0.12); }
+
+.xfce4-panel menu button:hover { color: #f2f1f0; background-color: #575757; border-color: black; }
+
+.xfce4-panel menu button:active, .xfce4-panel menu button:checked { color: #f2f1f0; outline-color: rgba(242, 241, 240, 0.3); border-color: black; background-color: #1f1f1f; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.2); }
+
+.xfce4-panel menu button:active:hover, .xfce4-panel menu button:checked:hover { color: #f2f1f0; background-color: #141414; }
+
+.xfce4-panel menu button.default { color: #f2f1f0; box-shadow: 1px 0 rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.2), 0 2px rgba(0, 0, 0, 0.12), -1px 0 rgba(0, 0, 0, 0.12), 0 -1px rgba(0, 0, 0, 0.12), inset 0 0 0 1px #c04310; }
+
+.xfce4-panel menu button:disabled { color: #939292; border-color: black; background-color: #252525; text-shadow: none; -gtk-icon-shadow: none; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1); }
+
+.xfce4-panel menu button:disabled > .label { color: inherit; }
+
 /* Mate/Gnome Flashback Panel */
 .gnome-panel-menu-bar, .gnome-panel-menu-bar menubar, .mate-panel-menu-bar, .mate-panel-menu-bar menubar { background-color: #333; }
 
