--- a/gnome-shell/gnome-shell-high-contrast.css
+++ b/gnome-shell/gnome-shell-high-contrast.css
@@ -992,7 +992,6 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #panel.dashtopanelMainPanel, #panel.dashtopanelMainPanel.dashtopanelBottom .app-well-app:hover .overview-icon, #panel.dashtopanelMainPanel.dashtopanelTop .app-well-app:hover .overview-icon { background-gradient-direction: vertical; background-gradient-start: transparent; background-gradient-end: transparent; }
 
-/* Dash to Panel extension styling */
 #panel.dashtopanelMainPanel.dashtopanelBottom { box-shadow: inset 0 -3px rgba(0, 0, 0, 0.4); }
 
 #panel.dashtopanelMainPanel.dashtopanelBottom .app-well-app:hover .overview-icon { box-shadow: inset 0 -3px rgba(255, 255, 255, 0.6); }
@@ -1037,24 +1036,57 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #panel.dashtopanelMainPanel .showdesktop-button { padding-right: 8px; }
 
-/* Dash to dock extension styling */
+#dashtodockContainer { background-color: rgba(0, 0, 0, 0.3); box-shadow: inset -1px 0 rgba(0, 0, 0, 0.1); border-radius: 0; }
+
+#dashtodockContainer.left.extended { border-color: rgba(255, 255, 255, 0.1); border-style: solid; border-right-width: 1px; }
+
+#dashtodockContainer.right.extended { border-color: rgba(255, 255, 255, 0.1); border-style: solid; border-left-width: 1px; }
+
+#dashtodockContainer.bottom.extended { border-color: rgba(255, 255, 255, 0.1); border-style: solid; border-top-width: 1px; }
+
+#dashtodockContainer.top.extended { border-color: rgba(255, 255, 255, 0.1); border-style: solid; border-bottom-width: 1px; }
+
+#dashtodockContainer.shrink #dash, #dashtodockContainer.dashtodock #dash { border: 0px; padding: 0px; }
+
 #dashtodockContainer.extended { border: 0; border-radius: 0; }
-
-#dashtodockContainer.extended.bottom #dash { box-shadow: inset 0 -3px rgba(0, 0, 0, 0.4); }
-
-#dashtodockContainer.extended.left #dash { box-shadow: inset 3px 0 rgba(0, 0, 0, 0.4); }
-
-#dashtodockContainer.extended.right #dash { box-shadow: inset -3px 0 rgba(0, 0, 0, 0.4); }
 
 #dashtodockContainer.bottom #dash .app-well-app-running-dot { width: 44px; height: 2px; background-color: rgba(255, 255, 255, 0.6); margin-bottom: 0; }
 
-#dashtodockContainer { border-radius: 0; }
+#dashtodockContainer.running-dots .dash-item-container > StButton, #dashtodockContainer.dashtodock .dash-item-container > StButton { background-size: contain; }
 
-#dashtodockContainer.bottom #dash .app-well-app:hover .overview-icon, #dashtodockContainer.bottom #dash .app-well-app:focus .overview-icon, #dashtodockContainer.bottom #dash .app-well-app:selected .overview-icon { box-shadow: inset 0 -3px rgba(255, 255, 255, 0.6); background-color: transparent; }
+#dashtodockContainer.shrink .dash-item-container > StButton, #dashtodockContainer.dashtodock .dash-item-container > StButton { padding: 2px 4px !important; }
 
-#dashtodockContainer.left #dash .app-well-app:hover .overview-icon, #dashtodockContainer.left #dash .app-well-app:focus .overview-icon, #dashtodockContainer.left #dash .app-well-app:selected .overview-icon { box-shadow: inset 3px 0 rgba(255, 255, 255, 0.6); background-color: transparent; }
+#dashtodockContainer.left #dash .app-well-app { padding: 0; border: none; }
 
-#dashtodockContainer.right #dash .app-well-app:hover .overview-icon, #dashtodockContainer.right #dash .app-well-app:focus .overview-icon, #dashtodockContainer.right #dash .app-well-app:selected .overview-icon { box-shadow: inset -3px 0 rgba(255, 255, 255, 0.6); background-color: transparent; }
+#dashtodockContainer.left #dash .app-well-app:hover { background-color: rgba(33, 93, 156, 0.5); box-shadow: inset 3px 0 rgba(255, 255, 255, 0.6); }
+
+#dashtodockContainer.left #dash .app-well-app:hover .overview-icon { background: none; }
+
+#dashtodockContainer.left #dash .app-well-app:active .overview-icon, #dashtodockContainer.left #dash .app-well-app:checked .overview-icon, #dashtodockContainer.left #dash .app-well-app:focus .overview-icon, #dashtodockContainer.left #dash .app-well-app:selected .overview-icon { background-color: #215d9c; box-shadow: none; border: 1px solid transparent; }
+
+#dashtodockContainer.right #dash .app-well-app { padding: 0; border: none; }
+
+#dashtodockContainer.right #dash .app-well-app:hover { background-color: rgba(33, 93, 156, 0.5); box-shadow: inset -3px 0 rgba(255, 255, 255, 0.6); }
+
+#dashtodockContainer.right #dash .app-well-app:hover .overview-icon { background: none; }
+
+#dashtodockContainer.right #dash .app-well-app:active .overview-icon, #dashtodockContainer.right #dash .app-well-app:checked .overview-icon, #dashtodockContainer.right #dash .app-well-app:focus .overview-icon, #dashtodockContainer.right #dash .app-well-app:selected .overview-icon { background-color: #215d9c; box-shadow: none; border: 1px solid transparent; }
+
+#dashtodockContainer.bottom #dash .app-well-app { padding: 0; border: none; }
+
+#dashtodockContainer.bottom #dash .app-well-app:hover { background-color: rgba(33, 93, 156, 0.5); box-shadow: inset 0 -3px rgba(255, 255, 255, 0.6); }
+
+#dashtodockContainer.bottom #dash .app-well-app:hover .overview-icon { background: none; }
+
+#dashtodockContainer.bottom #dash .app-well-app:active .overview-icon, #dashtodockContainer.bottom #dash .app-well-app:checked .overview-icon, #dashtodockContainer.bottom #dash .app-well-app:focus .overview-icon, #dashtodockContainer.bottom #dash .app-well-app:selected .overview-icon { background-color: #215d9c; box-shadow: none; border: 1px solid transparent; }
+
+#dashtodockContainer.top #dash .app-well-app { padding: 0; border: none; }
+
+#dashtodockContainer.top #dash .app-well-app:hover { background-color: rgba(33, 93, 156, 0.5); box-shadow: inset 0 3px rgba(255, 255, 255, 0.6); }
+
+#dashtodockContainer.top #dash .app-well-app:hover .overview-icon { background: none; }
+
+#dashtodockContainer.top #dash .app-well-app:active .overview-icon, #dashtodockContainer.top #dash .app-well-app:checked .overview-icon, #dashtodockContainer.top #dash .app-well-app:focus .overview-icon, #dashtodockContainer.top #dash .app-well-app:selected .overview-icon { background-color: #215d9c; box-shadow: none; border: 1px solid transparent; }
 
 stage { -st-icon-style: symbolic; }
 
